--- a/src/GitCoAuth/GitCoAuth.csproj
+++ b/src/GitCoAuth/GitCoAuth.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="RestSharp" Version="106.6.7" />
+    <PackageReference Include="TextCopy" Version="1.5.0" />
   </ItemGroup>
 
 </Project>
