--- a/src/GitCoAuth/GitCoAuth.csproj
+++ b/src/GitCoAuth/GitCoAuth.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>gitcoauth</ToolCommandName>
@@ -25,8 +25,8 @@ Run the tool passing in your co-author's GitHub username and it will generate th
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RestSharp" Version="106.6.7" />
-    <PackageReference Include="TextCopy" Version="1.5.0" />
+    <PackageReference Include="RestSharp" Version="107.3.0" />
+    <PackageReference Include="TextCopy" Version="6.1.0" />
   </ItemGroup>
 
 </Project>
