--- a/src/GitCoAuth/GitCoAuth.csproj
+++ b/src/GitCoAuth/GitCoAuth.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
 
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>gitcoauth</ToolCommandName>
@@ -13,28 +13,32 @@
     <Company />
     <Product />
     <PackageIconUrl>https://raw.githubusercontent.com/LorenzCK/github-coauth-tool/master/graphics/gitcoauth-logo-256.png</PackageIconUrl>
-	<PackageIconUrl>gitcoauth-logo-128.png</PackageIconUrl>
+    <PackageIcon>gitcoauth-logo-128.png</PackageIcon>
     <RepositoryUrl>https://github.com/LorenzCK/github-coauth-tool</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    
-    <Description>GitCoAuth is a simple .NET Core Global Tool that will help you generate co-authorship commit lines, as you should.
 
-Run the tool passing in your co-author's GitHub username and it will generate the correct commit message trailer to add (and copy it to your clipboard).</Description>
+    <Description>
+      GitCoAuth is a simple .NET Core Global Tool that will help you generate co-authorship commit lines, as you should.
+
+      Run the tool passing in your co-author's GitHub username and it will generate the correct commit message trailer to add (and copy it to your clipboard).
+    </Description>
     <PackageReleaseNotes></PackageReleaseNotes>
     <PackageTags>global-tool global-tools github co-authored co-authoring commit git</PackageTags>
     <PackageId>dotnet-gitcoauth</PackageId>
-	<Version>1.1.0</Version>
-    <AssemblyVersion>1.1.0</AssemblyVersion>
-    <FileVersion>1.1.0</FileVersion>
+    <Version>1.2.0</Version>
+    <AssemblyVersion>1.2.0</AssemblyVersion>
+    <FileVersion>1.2.0</FileVersion>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\..\graphics\gitcoauth-logo-128.png" Pack="true" PackagePath="\" Link="gitcoauth-logo-128.png" />
+    <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="RestSharp" Version="107.3.0" />
-    <PackageReference Include="TextCopy" Version="6.1.0" />
+    <PackageReference Include="RestSharp" Version="112.1.0" />
+    <PackageReference Include="TextCopy" Version="6.2.1" />
   </ItemGroup>
 
 </Project>
